--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.ETourisme"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".view.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
