--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         android:theme="@style/Theme.ETourisme"
         tools:targetApi="31">
         <activity
+            android:name=".view.SplashActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".view.SignInActivity"
             android:exported="false" />
         <activity
@@ -21,14 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".view.LoginActivity"
-            android:exported="true"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
