--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -14,18 +14,30 @@
         android:theme="@style/Theme.ETourisme"
         tools:targetApi="31">
         <activity
+            android:name=".view.SignInFragment5Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SignInFragment4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SignInFragment3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SignInFragment2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SignInFragment1Activity"
+            android:exported="false" />
+        <activity
             android:name=".view.SplashActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".view.SignInActivity"
-            android:exported="false" />
         <activity
             android:name=".view.HomeActivity"
             android:exported="false" />
