--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -11,8 +11,16 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ETourisme"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.ETourisme.NoActionBar" />
+        <activity
+            android:name=".view.PreferenceActivity"
+            android:exported="false" />
         <activity
             android:name=".view.SignInFragment5Activity"
             android:exported="false" />
