--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".view.LoadActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
