--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.ETourisme"
         tools:targetApi="31">
         <activity
+            android:name=".view.ListeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.SignInFragment5Activity"
             android:exported="false" />
         <activity
