--- a/ETourisme/app/build.gradle
+++ b/ETourisme/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation 'com.google.code.gson:gson:2.8.9' // Remplacez la version par la dernière version disponible
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 }
