--- a/ETourisme/app/src/main/AndroidManifest.xml
+++ b/ETourisme/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".view.EnlargedImageActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.DetailActivity"
             android:exported="false" />
         <activity
